2008-05-06  Andy Buckley  <andy@insectnation.org>

	* FastJets projection now protects against the case where no
	particles exist in the final state (where FastJet throws an
	exception).

	* AIDA file writing is now separated from the
	AnalysisHandler::finalize method... API users can choose what to
	do with the histo objects, be that writing out or further
	processing.

2008-04-29  Andy Buckley  <andy@insectnation.org>

	* Increased default tolerances in floating point comparisons as
	they were overly stringent and valid f.p. precision errors were
	being treated as significant.

	* Implemented remainder of Acosta UE analysis.

	* Added proper getEtSum() to Jet.

	* Added Et2() member and function to FourMomentum.

	* Added aida2flat conversion script.

	* Fixed ambiguity in TrackJet algorithm as to how the iteration
	continues when tracks are merged into jets in the inner loop.

2008-04-28  Andy Buckley  <andy@insectnation.org>

	* Merged in major "ProjectionHandler" branch. Projections are now
	all stored centrally in the singleton ProjectionHandler container,
	rather than as member pointers in projections and analyses. This
	also affects the applyProjection mechanism, which is now available
	as a templated method on Analysis and Projection. Still a few
	wrinkles need to be worked out.

	* The branch changes required a comprehensive review of all
	existing projections and analyses: lots of tidying up of these
	classes, as well as the auxiliary code like math utils, has taken
	place. Too much to list and track, unfortunately!

2008-03-28  Andy Buckley  <buckley@pc54.hep.ucl.ac.uk>

	* Started second CDF UE analysis ("Acosta"): histograms defined.

	* Fixed anomalous factor of 2 in LWH conversion from Profile1D
	to DataPointSet.

	* Added pT distribution histos to CDF 2001 UE analysis.

2008-03-26  Andy Buckley  <andy@insectnation.org>

	* Removed charged+neutral versions of histograms and projections
	from DELPHI analysis since they just duplicate the more robust