@@ -1,3 +1,11 @@
+2008-05-06  Hendrik Hoeth <hendrik.hoeth@cern.ch>
+
+	* New UnstableFinalState projection which selects all hadrons,
+	leptons and real photons including unstable particles.
+
+	* In the DELPHI_1996_S3430090 analysis the multiplicities for
+	pi+/pi- and p0 are filled, using the UnstableFinalState projection.
+
 2008-05-06  Andy Buckley  <andy@insectnation.org>
 
 	* FastJets projection now protects against the case where no
